src/test/ui/feature-gates/feature-gate-trait-alias.stderr
error[E0658]: trait aliases are experimental (see issue #41517)
  --> $DIR/feature-gate-trait-alias.rs:1:1
   |
LL | trait Foo = Default;
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(trait_alias)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
